add todo.html and style for this page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <header>
     <h2>Time Saver</h2>
     <nav>
-      <a href="#" class="home">Home</a>
-      <a href="#" class="todo">ToDos</a>
+      <a href="index.html" class="home">Home</a>
+      <a href="/html/toDo.html" class="todo">ToDos</a>
       <a href="#" class="newtodo">NewToDo</a>
       <a href="#" class="about">About</a>
       <a href="#" class="contact">Contact</a>
