--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,16 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stay Organize</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/frontend/css/style.css">
 </head>
 
 <body>
   <header>
     <h2>Time Saver</h2>
     <nav>
-      <a href="index.html" class="home">Home</a>
-      <a href="/html/toDo.html" class="todo">ToDos</a>
-      <a href="#" class="newtodo">NewToDo</a>
+      <a href="#" class="home">Home</a>
+      <a href="/frontend/html/toDo.html" class="todo">ToDos</a>
+      <a href="/frontend/html/addToDo.html" class="newtodo">NewToDo</a>
       <a href="#" class="about">About</a>
       <a href="#" class="contact">Contact</a>
     </nav>
