--- a/frontend/html/addToDo.html
+++ b/frontend/html/addToDo.html
@@ -34,7 +34,7 @@
       <option value="" disabled selected hidden>Choose Category</option>
 
     </select>
-    <textarea name="" id="description" cols="60" rows="15" placeholder="Add describtion"></textarea>
+    <textarea name="" id="description" cols="60" rows="15" placeholder="Add description"></textarea>
     <input id="deadline" type="text" maxlength="10" placeholder="Add date">
 
     <select name="priorities" id="priorities" required>
